--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 	<div class="wrapper">
 
 	    <!-- Sidebar -->
-	    <nav id="sidebar">
+	    <nav id="sidebar" class="collapsed">
 
-	    	<img src="images/headshot.png">
+	    	<button type="button" id="sideBarCollapse" class="btn btn-primary"><i class="fa fa-align-justify"></i></button>
+
+	    	<img class="" src="images/headshot.png">
 
 	        <ul class="list-unstyled components">
 
@@ -52,7 +54,7 @@
 
 	    	<section class="about-section">
 
-		    	<h1>TREVOR 
+		    	<h1 id="name">TREVOR 
 		    		<span class="primary-color-word">TOMLIN</span>
 		  		</h1>
 
@@ -108,6 +110,14 @@
 					  <div class="card-body">
 					  <h5 class="card-title">This Website</h5>
 					  <p class="card-text">Resume / Portfolio Website.</p>
+					  <a href="https://github.com/trevortomlin/trevortomlin.github.io" class="btn btn-primary">View</a>
+				  </div>
+				</div>
+
+				<div class="card" style="width: 18rem; height: 13rem;">
+					  <div class="card-body">
+					  <h5 class="card-title">Ball Balancer (WIP)</h5>
+					  <p class="card-text">Balances ball with Arduino.</p>
 					  <a href="https://github.com/trevortomlin/trevortomlin.github.io" class="btn btn-primary">View</a>
 				  </div>
 				</div>
