Fixed project link.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					  <div class="card-body">
 					  <h5 class="card-title">Ball Balancer (WIP)</h5>
 					  <p class="card-text">Balances ball with Arduino.</p>
-					  <a href="https://github.com/trevortomlin/trevortomlin.github.io" class="btn btn-primary">View</a>
+					  <a href="https://github.com/trevortomlin/Stewart-Platform-PID-Controller" class="btn btn-primary">View</a>
 				  </div>
 				</div>
 
