Changed about section.
Added to paragraph about wanting a Software Engineering job.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		    		<span class="primary-color-word">TOMLIN</span>
 		  		</h1>
 
-		    	<p>Hi, I'm Trevor. I am a junior at University of Washington Tacoma. I am currently looking for a Summer 2022 Software Engineering Internship.<br><br>Connect with me:</p>
+		    	<p>Hi, I'm Trevor. I am a junior at University of Washington Tacoma. I am currently looking for a Summer 2022 Software Engineering Internship or a Full-time Entry Level Software Engineering job.<br><br>Connect with me:</p>
 
 		    	<div class="social-icons">
 
