--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
 
 				<div class="card" style="width: 18rem; height: 13rem;">
 					  <div class="card-body">
+					  <h5 class="card-title">A* Visualizer</h5>
+					  <p class="card-text">Visualizer for A* pathfinding in Python.</p>
+					  <a href="https://github.com/trevortomlin/Scheme-Compiler" class="btn btn-primary">View</a>
+				  </div>
+				</div>
+
+				<div class="card" style="width: 18rem; height: 13rem;">
+					  <div class="card-body">
 					  <h5 class="card-title">Elliptic Curves Python</h5>
 					  <p class="card-text">Implements Elliptic Curves in Python.</p>
 					  <a href="https://github.com/trevortomlin/Elliptic-Curve-Python" class="btn btn-primary">View</a>
