Changed all http to https

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 <meta name=description content="Blog For Computer Science Topics">
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=http://trevortomlin.github.io/>
-<link rel=stylesheet href=http://trevortomlin.github.io/assets/style.css>
-<link rel=stylesheet href=http://trevortomlin.github.io/assets/green.css>
-<link rel=apple-touch-icon href=http://trevortomlin.github.io/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=http://trevortomlin.github.io/img/favicon/green.png>
+<link rel=canonical href=https://trevortomlin.github.io/>
+<link rel=stylesheet href=https://trevortomlin.github.io/assets/style.css>
+<link rel=stylesheet href=https://trevortomlin.github.io/assets/green.css>
+<link rel=apple-touch-icon href=https://trevortomlin.github.io/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=https://trevortomlin.github.io/img/favicon/green.png>
 <meta name=twitter:card content="summary">
 <meta property="og:locale" content="en">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Trevor's Blog">
 <meta property="og:description" content="Blog For Computer Science Topics">
-<meta property="og:url" content="http://trevortomlin.github.io/">
+<meta property="og:url" content="https://trevortomlin.github.io/">
 <meta property="og:site_name" content="Trevor's Blog">
-<meta property="og:image" content="http://trevortomlin.github.io/img/favicon/green.png">
+<meta property="og:image" content="https://trevortomlin.github.io/img/favicon/green.png">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 <link href=/index.xml rel=alternate type=application/rss+xml title="Trevor's Blog">
@@ -54,7 +54,7 @@ Trevor's Blog
 <div class=posts>
 <div class="post on-list">
 <h1 class=post-title>
-<a href=http://trevortomlin.github.io/posts/helloworld/>Hello World!</a>
+<a href=https://trevortomlin.github.io/posts/helloworld/>Hello World!</a>
 </h1>
 <div class=post-meta>
 <span class=post-date>
@@ -83,8 +83,8 @@ Introduction to my blog
 </div>
 </div>
 </footer>
-<script src=http://trevortomlin.github.io/assets/main.js></script>
-<script src=http://trevortomlin.github.io/assets/prism.js></script>
+<script src=https://trevortomlin.github.io/assets/main.js></script>
+<script src=https://trevortomlin.github.io/assets/prism.js></script>
 </div>
 </body>
 </html>
