--- a/about/index.html
+++ b/about/index.html
@@ -7,20 +7,20 @@
 Email Github LinkedIn">
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=http://trevortomlin.github.io/about/>
-<link rel=stylesheet href=http://trevortomlin.github.io/assets/style.css>
-<link rel=stylesheet href=http://trevortomlin.github.io/assets/green.css>
-<link rel=apple-touch-icon href=http://trevortomlin.github.io/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=http://trevortomlin.github.io/img/favicon/green.png>
+<link rel=canonical href=https://trevortomlin.github.io/about/>
+<link rel=stylesheet href=https://trevortomlin.github.io/assets/style.css>
+<link rel=stylesheet href=https://trevortomlin.github.io/assets/green.css>
+<link rel=apple-touch-icon href=https://trevortomlin.github.io/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=https://trevortomlin.github.io/img/favicon/green.png>
 <meta name=twitter:card content="summary">
 <meta property="og:locale" content="en">
 <meta property="og:type" content="article">
 <meta property="og:title" content="About">
 <meta property="og:description" content="Hi 👋, I&amp;rsquo;m Trevor I am a Senior studying Computer Science at the University of Washington Tacoma.
 Email Github LinkedIn">
-<meta property="og:url" content="http://trevortomlin.github.io/about/">
+<meta property="og:url" content="https://trevortomlin.github.io/about/">
 <meta property="og:site_name" content="Trevor's Blog">
-<meta property="og:image" content="http://trevortomlin.github.io/img/favicon/green.png">
+<meta property="og:image" content="https://trevortomlin.github.io/img/favicon/green.png">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 <meta property="article:published_time" content="2019-01-25 00:00:00 +0000 UTC">
@@ -50,7 +50,7 @@ Trevor's Blog
 <div class=content>
 <div class=post>
 <h1 class=post-title>
-<a href=http://trevortomlin.github.io/about/>About</a></h1>
+<a href=https://trevortomlin.github.io/about/>About</a></h1>
 <div class=post-meta>
 <span class=post-date>
 2019-01-25
@@ -74,8 +74,8 @@ Trevor's Blog
 </div>
 </div>
 </footer>
-<script src=http://trevortomlin.github.io/assets/main.js></script>
-<script src=http://trevortomlin.github.io/assets/prism.js></script>
+<script src=https://trevortomlin.github.io/assets/main.js></script>
+<script src=https://trevortomlin.github.io/assets/prism.js></script>
 </div>
 </body>
 </html>
